argocd/applications/froussard/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: froussard-gateway
  namespace: froussard
spec:
  selector:
    app: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "froussard.froussard.proompteng.ai"
