argocd/applications/froussard/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: froussard-vs
  namespace: froussard
spec:
  hosts:
    - "froussard.froussard.proompteng.ai"
  gateways:
    - froussard-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: froussard.froussard.svc.cluster.local
            port:
              number: 80
